# mindspore

./: '  .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  NOTICE  OWNERS  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  autogen.sh  build.bat  build.sh  dbg_dump_parser.sh  index.html  package.sh  py_filter  requirements.txt  setup.py  setup_package.py  test_matmul_custom.py  version.txt
mindspore/ccsrc/: CMakeLists.txt  OWNERS  common.h  mindspore.cc
mindspore/ccsrc/abstract/: abstract_value.cc  utils.cc
mindspore/ccsrc/armour/: CMakeLists.txt
mindspore/ccsrc/backend/: OWNERS
mindspore/ccsrc/base/: base.cc
mindspore/ccsrc/c_api/: CMakeLists.txt
mindspore/ccsrc/common/: CMakeLists.txt  api_register.cc  duplex_pipe.cc  duplex_pipe.h  duplex_pipe_win.cc  fallback.cc  profiler.cc  thread_pool.cc  thread_pool.h  trans.cc  trans.h  utils.cc  utils.h
mindspore/ccsrc/crypto/: CMakeLists.txt  crypto.cc  crypto.h  crypto_pybind.cc  crypto_pybind.h
mindspore/ccsrc/cxx_api/: CMakeLists.txt  OWNERS  acl_utils.h  akg_kernel_register.cc  akg_kernel_register.h  any_utils.cc  any_utils.h  cell.cc  context.cc  dlutils.h  factory.cc  factory.h  python_utils.cc  python_utils.h  serialization.cc  types.cc  utils.cc  utils.h
mindspore/ccsrc/dataset/: CMakeLists.txt
mindspore/ccsrc/debug/: CMakeLists.txt  OWNERS  anf_dump_utils.cc  anf_dump_utils.h  anf_ir_dump.cc  anf_ir_dump.h  anf_ir_utils.cc  anf_ir_utils.h  common.cc  common.h  convert_async.py  data_dump_parser.cc  data_dump_parser.h  debug_services.cc  debug_services.h  draw.cc  draw.h  dump_data_builder.h  dump_proto.cc  dump_proto.h  dump_utils.cc  dump_utils.h  e2e_dump.cc  e2e_dump.h  env_config_parser.cc  env_config_parser.h  info.cc  info.h  label.cc  label.h  md5.cc  md5.h  tensor_data.h  tensor_load.h  trace.cc  trace.h  trace_base.cc  trace_base.h  trace_info.cc  trace_info.h  (+2 more)
mindspore/ccsrc/device/: CMakeLists.txt  convert_tensor_utils.cc  convert_tensor_utils.h  device_address.h  kernel_adjust.cc  kernel_adjust.h  kernel_info.cc  kernel_info.h  kernel_runtime.cc  kernel_runtime.h  kernel_runtime_manager.cc  kernel_runtime_manager.h  memory_manager.cc  memory_manager.h
mindspore/ccsrc/distributed/: CMakeLists.txt  OWNERS  constants.h  init.cc  init.h
mindspore/ccsrc/fl/: CMakeLists.txt  OWNERS
mindspore/ccsrc/frontend/: OWNERS
mindspore/ccsrc/gvar/: CMakeLists.txt  logging_level.cc  typeid_manager.cc
mindspore/ccsrc/ir/: CMakeLists.txt  anf.cc  anf.h  anf_extends.cc  base.cc  base.h  dtype.cc  dtype.h  dtype_extends.cc  dtype_py.cc  func_graph.cc  func_graph.h  func_graph_cloner.cc  func_graph_cloner.h  func_graph_extends.cc  manager.cc  manager.h  meta_func_graph.cc  meta_func_graph.h  meta_tensor.cc  meta_tensor.h  meta_tensor_extends.cc  named.cc  named.h  optimizer_caller.h  param_value_minnie.h  param_value_py.cc  param_value_py.h  pattern_matcher.h  primitive.cc  primitive.h  primitive_base.cc  primitive_base.h  primitive_base_extends.cc  primitive_extends.cc  primitive_py.cc  primitive_py.h  scalar.h  scope.cc  signature.cc  (+12 more)
mindspore/ccsrc/kernel/: CMakeLists.txt  OWNERS  ascend_kernel_mod.cc  ascend_kernel_mod.h  common_utils.cc  common_utils.h  environ.h  environ_manager.cc  environ_manager.h  format_utils.cc  format_utils.h  framework_utils.cc  framework_utils.h  graph_kernel_info.h  kernel.cc  kernel.h  kernel_build_info.cc  kernel_build_info.h  kernel_factory.cc  kernel_factory.h  kernel_fusion.cc  kernel_fusion.h  kernel_get_value.cc  kernel_get_value.h  kernel_mod_cache.cc  kernel_mod_cache.h  kernel_query.cc  kernel_query.h  ops_utils.cc  ops_utils.h  philox_random.cc  philox_random.h  task_stream.h
mindspore/ccsrc/minddata/: OWNERS
mindspore/ccsrc/mindquantum/: CMakeLists.txt  circuit.cc  circuit.h  hamiltonian.cc  hamiltonian.h  parameter_resolver.cc  parameter_resolver.h  pqc_simulator.cc  pqc_simulator.h  sparse.cc  sparse.h  transformer.cc  transformer.h  utils.cc  utils.h
mindspore/ccsrc/mindrecord/: CMakeLists.txt
mindspore/ccsrc/minnie/: param_value_minnie.h  tensor_minnie.cc  tensor_minnie.h
mindspore/ccsrc/onnx/: CMakeLists.txt  ir_exporter.cc  onnx_exporter.cc
mindspore/ccsrc/operator/: CMakeLists.txt  cc_implementations.cc  cc_implementations.h  ops.cc  ops.h  ops_extends.cc  prim_arrays.cc  (+8 more)
mindspore/core/: CMakeLists.txt  OWNERS
mindspore/lite/: CMakeLists.txt  OWNERS  README.md  README_CN.md  build.sh  build_lite.sh
predict/: .gitignore  CMakeLists.txt
predict/benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  main.cc
predict/common/: CMakeLists.txt  common.h  file_utils.cc  file_utils.h  flag_parser.cc  flag_parser.h  func_utils.cc  func_utils.h  graph_util.cc  graph_util.h  module_registry.cc  module_registry.h  mslog.cc  mslog.h  op_utils.h  option.h  storage.cc  storage.h  utils.cc  utils.h
predict/include/: context.h  errorcode.h  session.h  tensor.h
predict/module/: CMakeLists.txt
predict/schema/: ms.fbs  op.fbs
predict/src/: CMakeLists.txt  context.cc  graph.cc  graph.h  graph_execution.cc  graph_execution.h  node.cc  node.h  op.cc  op.h  op_common.h  op_factory.cc  op_factory.h  op_registry.cc  op_registry.h  session.cc  tensor.cc
predict/test/: CMakeLists.txt  main.cc  run_tests.sh  test_context.cc  test_context.h
serving/: CMakeLists.txt  README.en.md  README.md  README_CN.md  main.cc  ms_service.proto
serving/acl/: acl_session.cc  acl_session.h  dvpp_process.cc  dvpp_process.h  model_info_example.json  model_process.cc  model_process.h
serving/core/: http_process.cc  http_process.h  ms_service_pb2.py  server.cc  server.h  serving_tensor.cc  serving_tensor.h  session.cc  session.h
serving/cpp_example/: CMakeLists.txt  ms_client.cc  ms_server.cc
serving/python_example/: ms_client.py  ms_client_test_call.py  ms_server.py  ms_service_pb2_grpc.py  test_cpu_lenet.py
serving/scripts/: format_source_code.sh
tests/cxx_st/: CMakeLists.txt  runtest.sh
(+61393 files in other folders)
